--- a/SistemaBanco/src/main/java/pacoteprincipal/sistemabanco/ExibirContas.form
+++ b/SistemaBanco/src/main/java/pacoteprincipal/sistemabanco/ExibirContas.form
@@ -33,7 +33,7 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="ExibirTodas" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="BotaoBuscarId" min="-2" pref="111" max="-2" attributes="0"/>
@@ -44,13 +44,15 @@
                               <Component id="BotaoBuscarCPF" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="BuscarCPF" min="-2" pref="90" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
+                          <Component id="MoneyTop" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="330" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="39" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -76,6 +78,8 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="ExibirTodas" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="MoneyTop" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane1" alignment="0" min="-2" pref="300" max="-2" attributes="0"/>
               </Group>
@@ -148,5 +152,13 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="MoneyTop">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Money top"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MoneyTopActionPerformed"/>
+      </Events>
+    </Component>
   </SubComponents>
 </Form>
