--- a/SistemaBanco/src/main/java/pacoteprincipal/sistemabanco/TelaCadastro.form
+++ b/SistemaBanco/src/main/java/pacoteprincipal/sistemabanco/TelaCadastro.form
@@ -103,7 +103,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="Cadastrar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Cadastar"/>
+        <Property name="text" type="java.lang.String" value="Cadastrar"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CadastrarActionPerformed"/>
